--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-type": "^0.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "reacticons": "^0.0.1",
     "yup": "^1.4.0"
